--- a/src/main/resources/templates/boards/boardForm.html
+++ b/src/main/resources/templates/boards/boardForm.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="form-group pt-3">
-            <label class="text-white" for="boardText">내용</label>
+            <label class="text-white" for="content">내용</label>
             <textarea class="form-control textForm" id="content" th:field="*{content}" placeholder="내용을 입력해주세요."
                       th:errorclass="field-error"></textarea>
             <div class="field-error" th:errors="*{content}">내용 없음</div>
