--- a/src/main/resources/templates/boards/boardForm.html
+++ b/src/main/resources/templates/boards/boardForm.html
@@ -15,7 +15,7 @@
 
         <div class="form-group">
             <label class="text-white" for="keyword">키워드</label>
-            <input type="text" class="form-control" id="key-word" th:field="*{keyword}" placeholder="해시태그"
+            <input type="text" class="form-control" id="keyword" th:field="*{keyword}" placeholder="해시태그"
                    th:errorclass="field-error">
             <div class="field-error" th:errors="*{keyword}">제목 없음</div>
         </div>
@@ -32,6 +32,13 @@
             <textarea class="form-control textForm" id="content" th:field="*{content}" placeholder="내용을 입력해주세요."
                       th:errorclass="field-error"></textarea>
             <div class="field-error" th:errors="*{content}">내용 없음</div>
+        </div>
+
+        <div class="form-group pt-2">
+            <label class="text-white" for="studyName">스터디 이름</label>
+            <input type="text" class="form-control" id="studyName" th:field="*{studyName}" placeholder="스터디 이름"
+                   th:errorclass="field-error">
+            <div class="field-error" th:errors="*{studyName}">내용 없음</div>
         </div>
 
         <script src="https://unpkg.com/@yaireo/tagify"></script>
