--- a/src/main/resources/templates/boards/board.html
+++ b/src/main/resources/templates/boards/board.html
@@ -64,7 +64,7 @@
         <tbody>
 
         <tr th:each="comment : ${boardDto.commentDtos}">
-            <td th:text="${comment.userDto?.email}" style="cursor: pointer;" th:onClick="|javascript:userInformation(${comment.boardId}, ${comment.userDto?.id})|"></td>
+            <td th:text="${comment.userDto?.email}" style="cursor: pointer;" th:onClick="|javascript:forStudyInformation(${boardDto.userDto?.id}, ${comment.boardId}, ${comment.userDto?.id})|"></td>
             <td th:text="${comment.content}"></td>
             <td th:text="${comment.writeTime}"></td>
         </tr>
@@ -85,8 +85,16 @@
     </form>
 </div>
 <script type="text/javascript">
-    function userInformation(boardId, userId) {
-        window.open('/userInfo/' + boardId + '/' + userId, 'USER INFORMATION', 'scrollbars=no, width=300, height=300, status=no, resizable=no');
+    function forStudyInformation(writerId, boardId, userId) {
+        if (writerId == userId) {
+            window.open('/userInfo/forStudy/' + boardId + '/' + userId, 'USER INFORMATION', 'scrollbars=no, width=300, height=300, status=no, resizable=no');
+        } else {
+            userInformation(userId);
+        }
+    }
+
+    function userInformation(commenterId) {
+        window.open('/userInfo/' + commenterId, 'USER INFORMATION', 'scrollbars=no, width=300, height=300, status=no, resizable=no');
     }
 </script>
 </body>
