--- a/src/main/resources/templates/users/forStudy/userInfo.html
+++ b/src/main/resources/templates/users/forStudy/userInfo.html
@@ -18,9 +18,10 @@
         </div>
     </div>
     <div class="py-3" style="text-align: center">
-        <div style="display: inline-block">
-            <button class="btn btn-outline-info">선발</button>
-        </div>
+        <form th:if="!${isMember}">
+            <input type="submit" name="선발" value="선발" class="w-100 btn btn-outline-success">
+        </form>
+        <div th:if="${isMember}" class="w-100 btn btn-success">선발완료</div>
     </div>
 </div>
 </body>
