--- a/src/main/resources/templates/studies/estimateForm.html
+++ b/src/main/resources/templates/studies/estimateForm.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/header :: header"/>
 <body>
-
+<div class="container">
+    <div style="text-align: center">
+        <div>
+            이메일 : <span th:text="${userDto.email}"></span>
+        </div>
+        <form>
+            <select class="form-select" name="평점">
+                <option selected>평점</option>
+                <option value="1">1점</option>
+                <option value="2">2점</option>
+                <option value="3">3점</option>
+                <option value="4">4점</option>
+                <option value="5">5점</option>
+            </select>
+            <input type="submit" style="cursor: pointer;" value="평가" class="w-100 btn btn-outline-success" th:onclick="|javascript:finish()|">
+        </form>
+    </div>
+</div>
+<script type="text/javascript">
+    function finish() {
+        window.open('about:blank', '_self').close();
+    }
+</script>
 </body>
 </html>
