--- a/src/main/resources/templates/studies/finishedStudy.html
+++ b/src/main/resources/templates/studies/finishedStudy.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/header :: header"/>
 <body>
-
+<div class="container">
+    <div>
+        <div>
+            스터디명 : <span th:text="${studyDto.name}"></span>
+        </div>
+        <div>
+            스터디장 : <span th:text="${studyDto.owner?.email}" th:onclick="|javascript:userInformation(${studyDto.owner?.id})|"></span>
+        </div>
+        <div>
+            <span th:if="!${studyDto.progress}" class="btn btn-outline-success">진행 중</span>
+            <span th:if="${studyDto.progress}" class="btn btn-success">완료</span>
+        </div>
+        <table>
+            <thead>
+            <tr>
+                <th>스티디원</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="user : ${studyDto.studyMemberDtos}">
+                <td th:text="${user.email}" th:onclick="|javascript:userInformation(${user.id})|"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div th:if="" style="text-align: center">
+        <form>
+            <button class="btn btn-outline-success" th:onclick="|javascript:estimate(${studyDto.id})|">평가하기</button>
+        </form>
+    </div>
+</div>
+<script type="text/javascript">
+    function estimate(studyId) {
+        window.open('/estimate/' + studyId, 'USER ESTIMATE', 'scrollbars=no, width=300, height=300, status=no, resizable=no');
+    }
+</script>
 </body>
 </html>
