--- a/src/main/resources/templates/studies/study.html
+++ b/src/main/resources/templates/studies/study.html
@@ -21,7 +21,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="user : ${studyDto.members}">
+            <tr th:each="user : ${studyDto.notEstimatedMembers}">
                 <td th:text="${user.email}" th:onclick="|javascript:userInformation(${user.id})|"></td>
             </tr>
             </tbody>
@@ -30,7 +30,7 @@
 </div>
 <script type="text/javascript">
     function userInformation(id) {
-        window.open('/userInfo/' + id, 'USER INFORMATION', 'scrollbars=no, width=300, height=300, status=no, resizable=no');
+        window.open('/userInfo/' + id, 'USER INFORMATION', 'scrollbars=no, width=500, height=300, status=no, resizable=no');
     }
 </script>
 </body>
