--- a/src/main/resources/templates/myInfo/comments.html
+++ b/src/main/resources/templates/myInfo/comments.html
@@ -10,7 +10,7 @@
             <tr>
                 <!-- 댓글 목록 확인 시에는 댓글 내용이 제목 대신 -->
                 <th style="width : 40%">내용</th>
-                <th style="width : 20%">게시글 젲목</th>
+                <th style="width : 20%">게시글 제목</th>
                 <!-- 댓글 목록 확인 시에는 삭제되는 요소 -->
                 <th>작성일자</th>
             </tr>
