--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -54,11 +54,11 @@
     </div>
     <div style="text-align: center;" class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
         <div style="display: inline-block" class="btn-group me-2" role="group" aria-label="First group">
-            <button th:if="${mainDtos.pageable.pageNumber} >= 0" type="button" class="btn btn-secondary" th:onclick="|javascript:prevPage(${mainDtos.pageable.pageNumber})|">&#60;</button>
+            <button th:if="${mainDtos.pageable.pageNumber} > 0" type="button" class="btn btn-secondary" th:onclick="|javascript:prevPage(${mainDtos.pageable.pageNumber})|">&#60;</button>
             <button th:if="${mainDtos.pageable.pageNumber} == 0" class="btn btn-secondary" disabled>&#60;</button>
             <button class="btn btn-secondary" th:text="${mainDtos.pageable.pageNumber} + 1"></button>
             <button th:if="${mainDtos.pageable.pageNumber} + 1 < ${mainDtos.totalPages}" type="button" class="btn btn-secondary" th:onclick="|javascript:nextPage(${mainDtos.pageable.pageNumber})|">&#62;</button>
-            <button th:if="${mainDtos.pageable.pageNumber}+ 1 == ${mainDtos.totalPages}" class="btn btn-secondary" disabled>&#62;</button>
+            <button th:if="${mainDtos.totalPages} == 0 or ${mainDtos.pageable.pageNumber} + 1 >= ${mainDtos.totalPages}" class="btn btn-secondary" disabled>&#62;</button>
         </div>
         <form style="display: inline-block">
             <input type="text" id="page" name="page" size="5"/>
@@ -68,12 +68,13 @@
 </div>
 <script type="text/javascript">
     function prevPage(page) {
-        location.href='?page=' + (page - 1);
+        location.href='?page=' + page;
     }
 
     function nextPage(page) {
-        location.href='?page=' + (page + 1);
+        location.href='?page=' + (page + 2);
     }
+
 </script>
 </body>
 </html>
