--- a/src/main/resources/templates/myInfo/studies.html
+++ b/src/main/resources/templates/myInfo/studies.html
@@ -37,6 +37,29 @@
             </tbody>
         </table>
     </div>
+    <div style="text-align: center;" class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+        <div style="display: inline-block" class="btn-group me-2" role="group" aria-label="First group">
+            <button th:if="${myStudyDtos.pageable.pageNumber} > 0" type="button" class="btn btn-secondary" th:onclick="|javascript:prevPage(${myStudyDtos.pageable.pageNumber})|">&#60;</button>
+            <button th:if="${myStudyDtos.pageable.pageNumber} == 0" class="btn btn-secondary" disabled>&#60;</button>
+            <button class="btn btn-secondary" th:text="${myStudyDtos.pageable.pageNumber} + 1"></button>
+            <button th:if="${myStudyDtos.pageable.pageNumber} + 1 < ${myStudyDtos.totalPages}" type="button" class="btn btn-secondary" th:onclick="|javascript:nextPage(${myStudyDtos.pageable.pageNumber})|">&#62;</button>
+            <button th:if="${myStudyDtos.totalPages} == 0 or ${myStudyDtos.pageable.pageNumber} + 1 >= ${myStudyDtos.totalPages}" class="btn btn-secondary" disabled>&#62;</button>
+        </div>
+        <form style="display: inline-block">
+            <input type="text" id="page" name="page" size="5"/>
+            <button style="display: inline-block" class="btn btn-secondary" type="submit">이동</button>
+        </form>
+    </div>
 </div>
+<script type="text/javascript">
+    function prevPage(page) {
+        location.href='?page=' + page;
+    }
+
+    function nextPage(page) {
+        location.href='?page=' + (page + 2);
+    }
+
+</script>
 </body>
 </html>
